feat: add redoc-handler for openapi docs
